--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <header>Le Menu</header>
+    <header>Le Menu du site Quai Antique</header>
 
     <main id="main-page">
         <!-- Le contenu de la page sera injecter ici  -->
