--- a/pages/home.html
+++ b/pages/home.html
@@ -1,1 +1,2 @@
-<h1>Bienvenue sur le site du restaurant Quai Antique</h1>
+<h1>Bienvenue sur le site du restaurant Quai Antique <i class="bi bi-airplane"></i></h1>
+<button class="btn btn-primary">Cliquez ici</button>
