Ajout du footer

--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
                 </div>
             </div>
         </nav>
-
-        Le Menu du site Quai Antique <i class="bi bi-airplane"></i>
     </header>
 
     <main id="main-page">
@@ -66,7 +64,24 @@
 
     </main>
 
-    <footer>Le footer de mon site</footer>
+    <footer class="footer bg-dark text-white text-center">
+        <div class="row">
+            <div class="col-12 col-lg-4">
+                <h3 class="text-primary">Nos horaires</h3>
+                <p>Du mardi au dimanche 12:00-14:00 18:00-23:00</p>
+            </div>
+            <div class="col-6 col-lg-4">
+                <p>Quai Antique <br>
+                    5 rue de la route <br>
+                    31150 Ville <br>
+                    04 01 01 01 01 <br>
+                </p>
+            </div>
+            <div class="col-6 col-lg-4">
+                <p>contact@quaiantique.com</p>
+            </div>
+        </div>
+    </footer>
 
     <script type="module" src="Rooter/Router.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
