--- a/pages/home.html
+++ b/pages/home.html
@@ -1,2 +1,7 @@
-<h1>Bienvenue sur le site du restaurant Quai Antique</i></h1>
-<button class="btn btn-primary">Cliquez ici</button>
+<div class="hero-scene text-center text-white">
+    <div class=" hero-scene-content">
+        <p>Le chef Arnaud Mixhant vous invite au</p>
+        <h1>Quai Antique</h1>
+        <button class="btn btn-primary">Réserver</button>
+    </div>
+</div>
