--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,85 @@
 <div class="hero-scene text-center text-white">
     <div class=" hero-scene-content">
-        <p>Le chef Arnaud Mixhant vous invite au</p>
+        <p>Le chef Arnaud Michant vous invite au</p>
         <h1>Quai Antique</h1>
         <button class="btn btn-primary">Réserver</button>
     </div>
 </div>
+
+<section>
+    <article>
+        <div class="container p-4">
+            <h2 class="text-center text-primary">Bienvenue au Quai Antique</h2>
+
+            <div class="row row-col-2 align-items-center">
+
+                <div class="col">
+                    <p class="text-justify">
+                        Bienvenue sur le site de notre restaurant gastronomique situé au cœur de la magnifique ville de
+                        Chambéry. Le chef Arnaud Michant vous invite à découvrir un voyage culinaire mémorable.
+                    </p>
+                </div>
+
+                <div class="col">
+                    <img class="w-100 rounded" src="../images/cuisine.jpg" alt="Chef dans la cuisine">
+                </div>
+
+                <div class="text-center pt-4">
+                    <a href="#" class="btn btn-primary">Nos menus</a>
+                </div>
+
+            </div>
+
+        </div>
+    </article>
+    <article class="bg-black text-white">
+        <div class="container p-4">
+            <h2 class="text-center text-primary">Des produits frais</h2>
+
+            <div class="row row-col-2 align-items-center">
+
+                <div class="col">
+                    <img class="w-100 rounded" src="../images/meat.jpg" alt="Chef dans la cuisine">
+                </div>
+
+                <div class="col">
+                    <p class="text-justify">
+                        Découvrez la richesse des saveurs avec nos plats élaborés à partir de produits frais et de
+                        saison, cueillis localement.
+                    </p>
+                </div>
+
+                <div class="text-center pt-4">
+                    <a href="#" class="btn btn-primary">Voir la galerie</a>
+                </div>
+
+            </div>
+
+        </div>
+    </article>
+    <article>
+        <div class="container p-4">
+            <h2 class="text-center text-primary">Réservation en ligne</h2>
+
+            <div class="row row-col-2 align-items-center">
+
+                <div class="col">
+                    <p class="text-justify">
+                        Vous pouvez directement réserver votre table sur ce site !
+                        Il suffit de cliquer sur le bouton ci-dessous.
+                    </p>
+                </div>
+
+                <div class="col">
+                    <img class="w-100 rounded" src="../images/spices.jpg" alt="Chef dans la cuisine">
+                </div>
+
+                <div class="text-center pt-4">
+                    <a href="#" class="btn btn-primary">Réserver</a>
+                </div>
+
+            </div>
+
+        </div>
+    </article>
+</section>
