galerie + page menu + first media querie

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                             <a class="nav-link" href="/">Acceuil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Galerie</a>
+                            <a class="nav-link" href="/galerie">Galerie</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">La carte</a>
+                            <a class="nav-link" href="/menu">La carte</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Les réservations</a>
@@ -64,18 +64,18 @@
 
     <footer class="footer bg-dark text-white text-center">
         <div class="row">
-            <div class="col-12 col-lg-4">
+            <div class="col-lg-4 col-12">
                 <h3 class="text-primary">Nos horaires</h3>
-                <p>Du mardi au dimanche 12:00-14:00 18:00-23:00</p>
+                <p>Du mardi au dimanche :<br> 12:00-14:00 18:00-23:00</p>
             </div>
-            <div class="col-6 col-lg-4">
+            <div class="col-lg-4 col-md-6 col-12">
                 <p>Quai Antique <br>
                     5 rue de la route <br>
                     31150 Ville <br>
                     04 01 01 01 01 <br>
                 </p>
             </div>
-            <div class="col-6 col-lg-4">
+            <div class="col-lg-4 col-md-6 col-12">
                 <p>contact@quaiantique.com</p>
             </div>
         </div>
