--- a/pages/home.html
+++ b/pages/home.html
@@ -25,13 +25,14 @@
                 </div>
 
                 <div class="text-center pt-4">
-                    <a href="#" class="btn btn-primary">Nos menus</a>
+                    <a href="/menu" class="btn btn-primary">Nos menus</a>
                 </div>
 
             </div>
 
         </div>
     </article>
+
     <article class="bg-black text-white">
         <div class="container p-4">
             <h2 class="text-center text-primary">Des produits frais</h2>
@@ -50,13 +51,14 @@
                 </div>
 
                 <div class="text-center pt-4">
-                    <a href="#" class="btn btn-primary">Voir la galerie</a>
+                    <a href="/galerie" class="btn btn-primary">Voir la galerie</a>
                 </div>
 
             </div>
 
         </div>
     </article>
+
     <article>
         <div class="container p-4">
             <h2 class="text-center text-primary">Réservation en ligne</h2>
