--- a/pages/menu.html
+++ b/pages/menu.html
@@ -3,3 +3,76 @@
         <h1>Menus</h1>
     </div>
 </div>
+
+<div class="container">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-2">
+
+        <div class="col p-3">
+            <div class="text-primary">
+                <h2 class="text-center">Entrées</h2>
+                <div class="menu-card">
+                    <img src="/images/icon-plat-entree.png" alt="icone de plats">
+                    <ul class="list">
+                        <li>Caponata facile aubergine et tomate</li>
+                        <li>Concombre ricotta, basilic</li>
+                        <li>Salade de courgettes, parmesan et pignons de pin</li>
+                        <li>Ceviche de daurade (Pierre Hermé)</li>
+                        <li>Gaspacho de courgette au curcuma</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="col p-3">
+            <div class="text-primary">
+                <h2 class="text-center">Plats</h2>
+                <div class="menu-card">
+                    <img src="/images/icon-plat-dinde.png" alt="icone de plats">
+                    <ul class="list">
+                        <li>Tagliatelles de carottes, sauce ricotta</li>
+                        <li>Tarte rustique courgette, burrata, et parmesan</li>
+                        <li>Poêlée de girolles</li>
+                        <li>Pâtes à la sauce aux poivrons et au chèvre frais</li>
+                        <li>Lasagnes aux courgettes et feta</li>
+                        <li>Curry de légumes au lait de coco</li>
+                        <li>Épaule d'agneau entière rôtie au four</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="col p-3">
+            <div class="text-primary">
+                <h2 class="text-center">Desserts</h2>
+                <div class="menu-card">
+                    <img src="/images/icon-glace.png" alt="icone de plats">
+                    <ul class="list">
+                        <li>Tiramisu caramel et spéculoos</li>
+                        <li>Sundae maison</li>
+                        <li>Tiramisu givré aux framboises</li>
+                        <li>Mousse glacée au melon et au yaourt</li>
+                        <li>Crème brûlée</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="col p-3">
+            <div class="text-primary">
+                <h2 class="text-center">Boissons</h2>
+                <div class="menu-card">
+                    <img src="/images/icon-cafe.png" alt="icone de plats">
+                    <ul class="list">
+                        <li>Cocktail</li>
+                        <li>Boisson gazeuse</li>
+                        <li>Vin</li>
+                        <li>Jus de fruit</li>
+                        <li>Eau de source</li>
+                        <li>Café</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
