Ajout pages signin et signup

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="#">Mon compte</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Connexion/Déconnexion</a>
+                            <a class="nav-link" href="/signin">Connexion</a>
                         </li>
                     </ul>
                 </div>
