--- a/pages/menu.html
+++ b/pages/menu.html
@@ -76,3 +76,7 @@
 
     </div>
 </div>
+
+<div class="text-center pt-3">
+    <button class="btn btn-primary">Je réserve maintenant !</button>
+</div>
