ajout bouton edition images galeries

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Quai Antique</a>
+                <a class="navbar-brand" href="/"><i class="bi bi-cup-hot"></i> Quai Antique</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
