--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -5,12 +5,19 @@
 </div>
 
 <div class="container">
+    <div class="text-center">
+        <button class="btn btn-primary">Ajouter une photo</button>
+    </div>
     <div class="row row-cols-2 row-cols-lg-3">
 
         <div class="col p-3">
             <div class="image-card text-white">
                 <img src="/images/mediterranean-cuisine.jpg" alt="Des léqumes et épices" class="rounded w-100">
                 <p class="titre-image">Images 1</p>
+                <div class="action-class-buttons">
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square"></i></button>
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash"></i></button>
+                </div>
             </div>
         </div>
 
@@ -18,6 +25,10 @@
             <div class="image-card text-white">
                 <img src="/images/garlic.jpg" alt="Fenêtre" class="rounded w-100">
                 <p class="titre-image">Images 2</p>
+                <div class="action-class-buttons">
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square"></i></button>
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash"></i></button>
+                </div>
             </div>
         </div>
 
@@ -25,6 +36,10 @@
             <div class="image-card text-white">
                 <img src="/images/kitchen.jpg" alt="Cuisine" class="rounded w-100">
                 <p class="titre-image">Images 3</p>
+                <div class="action-class-buttons">
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square"></i></button>
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash"></i></button>
+                </div>
             </div>
         </div>
 
@@ -32,6 +47,10 @@
             <div class="image-card text-white">
                 <img src="/images/platter.jpg" alt="Nourriture" class="rounded w-100">
                 <p class="titre-image">Images 4</p>
+                <div class="action-class-buttons">
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square"></i></button>
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash"></i></button>
+                </div>
             </div>
         </div>
 
@@ -39,6 +58,10 @@
             <div class="image-card text-white">
                 <img src="/images/spices.jpg" alt="épices" class="rounded w-100">
                 <p class="titre-image">Images 5</p>
+                <div class="action-class-buttons">
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square"></i></button>
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash"></i></button>
+                </div>
             </div>
         </div>
 
@@ -46,8 +69,15 @@
             <div class="image-card text-white">
                 <img src="/images/meat.jpg" alt="Steack" class="rounded w-100">
                 <p class="titre-image">Images 6</p>
+                <div class="action-class-buttons">
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square"></i></button>
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash"></i></button>
+                </div>
             </div>
         </div>
 
+    </div>
+    <div class="text-center">
+        <a href="#" class="btn btn-primary">Réserver</a>
     </div>
 </div>
