--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -6,7 +6,8 @@
 
 <div class="container">
     <div class="text-center">
-        <button class="btn btn-primary">Ajouter une photo</button>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal">Ajouter
+            une photo</button>
     </div>
     <div class="row row-cols-2 row-cols-lg-3">
 
@@ -15,8 +16,10 @@
                 <img src="/images/mediterranean-cuisine.jpg" alt="Des léqumes et épices" class="rounded w-100">
                 <p class="titre-image">Images 1</p>
                 <div class="action-class-buttons">
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square"></i></button>
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash"></i></button>
+                    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal"
+                        data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
+                    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal"
+                        data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                 </div>
             </div>
         </div>
@@ -25,10 +28,7 @@
             <div class="image-card text-white">
                 <img src="/images/garlic.jpg" alt="Fenêtre" class="rounded w-100">
                 <p class="titre-image">Images 2</p>
-                <div class="action-class-buttons">
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square"></i></button>
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash"></i></button>
-                </div>
+
             </div>
         </div>
 
@@ -36,10 +36,7 @@
             <div class="image-card text-white">
                 <img src="/images/kitchen.jpg" alt="Cuisine" class="rounded w-100">
                 <p class="titre-image">Images 3</p>
-                <div class="action-class-buttons">
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square"></i></button>
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash"></i></button>
-                </div>
+
             </div>
         </div>
 
@@ -47,10 +44,7 @@
             <div class="image-card text-white">
                 <img src="/images/platter.jpg" alt="Nourriture" class="rounded w-100">
                 <p class="titre-image">Images 4</p>
-                <div class="action-class-buttons">
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square"></i></button>
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash"></i></button>
-                </div>
+
             </div>
         </div>
 
@@ -58,10 +52,7 @@
             <div class="image-card text-white">
                 <img src="/images/spices.jpg" alt="épices" class="rounded w-100">
                 <p class="titre-image">Images 5</p>
-                <div class="action-class-buttons">
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square"></i></button>
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash"></i></button>
-                </div>
+
             </div>
         </div>
 
@@ -69,15 +60,68 @@
             <div class="image-card text-white">
                 <img src="/images/meat.jpg" alt="Steack" class="rounded w-100">
                 <p class="titre-image">Images 6</p>
-                <div class="action-class-buttons">
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square"></i></button>
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash"></i></button>
-                </div>
+
             </div>
         </div>
 
     </div>
     <div class="text-center">
         <a href="#" class="btn btn-primary">Réserver</a>
+    </div>
+</div>
+
+<!-- Modal Edition -->
+<div class="modal fade" id="EditionPhotoModal" tabindex="-1" aria-labelledby="EditionPhotoModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title fs-5" id="EditionPhotoModalLabel">Edition Photo</h2>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-3">
+                        <label for="NamePhotoInput" class="form-label">Titre</label>
+                        <input type="text" class="form-control" id="NamePhotoInput" placeholder="Nom de la Photo">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="ImageInput" class="form-label">Image</label>
+                        <input type="file" class="form-control" id="ImageInput">
+                    </div>
+
+                    <div class="text-center">
+                        <button type="button" class="btn btn-primary">Enregistrer</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Suppression -->
+<div class="modal fade" id="DeletePhotoModal" tabindex="-1" aria-labelledby="DeletePhotoModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title fs-5" id="DeletePhotoModalLabel">Êtes vous sûr de vouloir supprimer cette photo ?
+                </h2>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-3">
+                        <p>Titre</p>
+                        <img src="/images/mediterranean-cuisine.jpg" alt="Des léqumes et épices" class="rounded w-100">
+                    </div>
+
+                    <div class="text-center">
+                        <button type="button" class="btn btn-danger">Supprimer</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
