--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="/menu">La carte</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Les réservations</a>
+                            <a class="nav-link" href="/allResa">Les réservations</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/account">Mon compte</a>
