--- a/pages/menu.html
+++ b/pages/menu.html
@@ -78,5 +78,5 @@
 </div>
 
 <div class="text-center pt-3">
-    <button class="btn btn-primary">Je réserve maintenant !</button>
+    <a href="/reserver" class="btn btn-primary">Je réserve maintenant !</a>
 </div>
