--- a/pages/reservations/allResa.html
+++ b/pages/reservations/allResa.html
@@ -10,7 +10,7 @@
 
 <div class="container text-center allReservations">
 
-    <a href="#">
+    <a href="#" data-bs-toggle="modal" data-bs-target="#DeleteResaModal">
         <span>12/05/2024 |</span>
         <span>12:10 |</span>
         <span>5 personnes |</span>
@@ -28,4 +28,28 @@
         <span>5 personnes |</span>
         <span>Pas d'allergie</span>
     </a>
+</div>
+
+
+<!-- Modal d'annulation -->
+<div class="modal fade" id="DeleteResaModal" tabindex="-1" aria-labelledby="DeleteResaModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title fs-5" id="DeleteResaModalLabel">Gérer votre Réservation ?
+                </h2>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+
+            <div class="modal-body">
+                <div class="mb-3">
+                    <p>Pour annuler votre réservation cliquez sur : <br>"Annuler ma réservation"</p>
+                </div>
+                <div class="text-center">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Continuer</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Annuler ma réservation</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
