--- a/pages/auth/signup.html
+++ b/pages/auth/signup.html
@@ -7,23 +7,39 @@
 <div class="container">
     <form>
         <div class="mb-3">
-            <label for="NameInput" class="form-label">Nom</label>
-            <input type="text" class="form-control" id="NameInput" placeholder="Votre nom">
+            <label for="NomInput" class="form-label">Nom</label>
+            <input type="text" class="form-control" id="NomInput" placeholder="Votre nom">
+            <div class="invalid-feedback">
+                Le nom est requis
+            </div>
         </div>
 
         <div class="mb-3">
-            <label for="ForenameInput" class="form-label">Prénom</label>
-            <input type="text" class="form-control" id="ForenameInput" placeholder="Votre prénom">
+            <label for="PrenomInput" class="form-label">Prénom</label>
+            <input type="text" class="form-control" id="PrenomInput" placeholder="Votre prénom">
+            <div class="invalid-feedback">
+                Le prénom est requis
+            </div>
         </div>
 
         <div class="mb-3">
             <label for="EmailInput" class="form-label">Email</label>
             <input type="email" class="form-control" id="EmailInput" placeholder="Exemple@email.com">
+            <div class="invalid-feedback">
+                Le mail n'est pas au bon format
+            </div>
         </div>
 
         <div class="mb-3">
             <label for="PasswordInput" class="form-label">Mot de passe</label>
             <input type="password" class="form-control" id="PasswordInput">
+            <div class="invalid-feedback">
+                Le mot de passe n'est pas assez robuste : Au moins 8 caractères, comprenant au moins 1 lettre majuscule,
+                1 lettre minuscule, 1 chiffre, et un caractère spéciale
+            </div>
+            <div class="valid-feedback">
+                Le mot de passe est robuste
+            </div>
         </div>
 
         <div class="mb-3">
@@ -32,7 +48,7 @@
         </div>
 
         <div class="text-center">
-            <button type="submit" class="btn btn-primary">Inscrition</button>
+            <button type="submit" class="btn btn-primary" id="btn-validation-inscription">Inscrition</button>
         </div>
     </form>
     <div class="text-center pt-3">
