js confirme mdp form inscription

--- a/pages/auth/signup.html
+++ b/pages/auth/signup.html
@@ -43,8 +43,11 @@
         </div>
 
         <div class="mb-3">
-            <label for="ValidatePasswordInput" class="form-label">Validez votre mot de passe</label>
+            <label for="ValidatePasswordInput" class="form-label">Confirmer votre mot de passe</label>
             <input type="password" class="form-control" id="ValidatePasswordInput">
+            <div class="invalid-feedback">
+                La confirmation n'est pas identique au MDP
+            </div>
         </div>
 
         <div class="text-center">
