gestion admin/client/etc..

--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="container">
-    <div class="text-center">
+    <div class="text-center" data-show="admin">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal">Ajouter
             une photo</button>
     </div>
@@ -15,7 +15,7 @@
             <div class="image-card text-white">
                 <img src="/images/mediterranean-cuisine.jpg" alt="Des léqumes et épices" class="rounded w-100">
                 <p class="titre-image">Images 1</p>
-                <div class="action-class-buttons">
+                <div class="action-class-buttons" data-show="admin">
                     <button type="button" class="btn btn-outline-light" data-bs-toggle="modal"
                         data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                     <button type="button" class="btn btn-outline-light" data-bs-toggle="modal"
@@ -66,7 +66,7 @@
 
     </div>
     <div class="text-center">
-        <a href="#" class="btn btn-primary">Réserver</a>
+        <a href="/reserver" class="btn btn-primary">Réserver</a>
     </div>
 </div>
 
