--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
     <div class=" hero-scene-content">
         <p>Le chef Arnaud Michant vous invite au</p>
         <h1>Quai Antique</h1>
-        <button class="btn btn-primary">Réserver</button>
+        <a href="/reserver" class="btn btn-primary">Réserver</a>
     </div>
 </div>
 
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="text-center pt-4">
-                    <a href="#" class="btn btn-primary">Réserver</a>
+                    <a href="/reserver" class="btn btn-primary">Réserver</a>
                 </div>
 
             </div>
