--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/account">Mon compte</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item" data-show="disconnected">
                             <a class="nav-link" href="/signin">Connexion</a>
+                        </li>
+                        <li class="nav-item" data-show="connected">
+                            <button class="nav-link" id="signout-btn">Déconnexion</button>
                         </li>
                     </ul>
                 </div>
@@ -79,6 +82,7 @@
         </div>
     </footer>
 
+    <script src="js/script.js"></script>
     <script type="module" src="Rooter/Router.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
