--- a/pages/auth/signin.html
+++ b/pages/auth/signin.html
@@ -9,6 +9,9 @@
         <div class="mb-3">
             <label for="EmailInput" class="form-label">Email</label>
             <input type="email" class="form-control" id="EmailInput" placeholder="Exemple@email.com">
+            <div class="invalid-feedback">
+                Le mail et le mot de passe ne correspondent pas
+            </div>
         </div>
 
         <div class="mb-3">
@@ -17,7 +20,7 @@
         </div>
 
         <div class="text-center">
-            <button type="submit" class="btn btn-primary">Connexion</button>
+            <button type="button" class="btn btn-primary" id="btnSignin">Connexion</button>
         </div>
     </form>
     <div class="text-center pt-3">
