--- a/pages/reservations/reserver.html
+++ b/pages/reservations/reserver.html
@@ -23,14 +23,14 @@
         </div>
 
         <div class="mb-3">
-            <label for="NbConvivesInput" class="form-label">Nombre de convives habituel</label>
-            <input type="number" class="form-control" id="NbConvivesInput"
-                placeholder="Combien vous êtes actuellement ?" value="4">
+            <label for="NbConvivesInput" class="form-label">Nombre de convives</label>
+            <input type="number" class="form-control" id="NbConvivesInput" placeholder="Combien êtes vous ?" value="1"
+                min="1" max="30" required>
         </div>
 
         <div class="mb-3">
             <label for="dateInput" class="form-label">Date</label>
-            <input type="date" class="form-control" id="dateInput">
+            <input type="date" class="form-control" id="dateInput" required>
         </div>
 
         <div class="mb-3">
@@ -64,7 +64,7 @@
         </div>
 
         <div class="text-center">
-            <button type="submit" class="btn btn-primary">Réserver</button>
+            <button type="submit" class="btn btn-primary" id="btn-validation-reservation">Réserver</button>
             <button type="button" class="btn btn-danger">Annuler</button>
         </div>
     </form>
