--- a/pages/auth/signup.html
+++ b/pages/auth/signup.html
@@ -5,10 +5,10 @@
 </div>
 
 <div class="container">
-    <form>
+    <form id="formulaireInscription">
         <div class="mb-3">
             <label for="NomInput" class="form-label">Nom</label>
-            <input type="text" class="form-control" id="NomInput" placeholder="Votre nom">
+            <input type="text" class="form-control" id="NomInput" placeholder="Votre nom" name="nom">
             <div class="invalid-feedback">
                 Le nom est requis
             </div>
@@ -16,7 +16,7 @@
 
         <div class="mb-3">
             <label for="PrenomInput" class="form-label">Prénom</label>
-            <input type="text" class="form-control" id="PrenomInput" placeholder="Votre prénom">
+            <input type="text" class="form-control" id="PrenomInput" placeholder="Votre prénom" name="prenom">
             <div class="invalid-feedback">
                 Le prénom est requis
             </div>
@@ -24,7 +24,7 @@
 
         <div class="mb-3">
             <label for="EmailInput" class="form-label">Email</label>
-            <input type="email" class="form-control" id="EmailInput" placeholder="Exemple@email.com">
+            <input type="email" class="form-control" id="EmailInput" placeholder="Exemple@email.com" name="email">
             <div class="invalid-feedback">
                 Le mail n'est pas au bon format
             </div>
@@ -32,7 +32,7 @@
 
         <div class="mb-3">
             <label for="PasswordInput" class="form-label">Mot de passe</label>
-            <input type="password" class="form-control" id="PasswordInput">
+            <input type="password" class="form-control" id="PasswordInput" name="mdp">
             <div class="invalid-feedback">
                 Le mot de passe n'est pas assez robuste : Au moins 8 caractères, comprenant au moins 1 lettre majuscule,
                 1 lettre minuscule, 1 chiffre, et un caractère spéciale
@@ -51,7 +51,7 @@
         </div>
 
         <div class="text-center">
-            <button type="submit" class="btn btn-primary" id="btn-validation-inscription">Inscrition</button>
+            <button type="button" class="btn btn-primary" id="btn-validation-inscription">Inscrition</button>
         </div>
     </form>
     <div class="text-center pt-3">
