ass connection api

--- a/pages/auth/signin.html
+++ b/pages/auth/signin.html
@@ -5,10 +5,10 @@
 </div>
 
 <div class="container">
-    <form>
+    <form id="signinForm">
         <div class="mb-3">
             <label for="EmailInput" class="form-label">Email</label>
-            <input type="email" class="form-control" id="EmailInput" placeholder="Exemple@email.com">
+            <input type="email" class="form-control" id="EmailInput" placeholder="Exemple@email.com" name="email">
             <div class="invalid-feedback">
                 Le mail et le mot de passe ne correspondent pas
             </div>
@@ -16,7 +16,7 @@
 
         <div class="mb-3">
             <label for="PasswordInput" class="form-label">Mot de passe</label>
-            <input type="password" class="form-control" id="PasswordInput">
+            <input type="password" class="form-control" id="PasswordInput" name="mdp">
         </div>
 
         <div class="text-center">
