--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -13,7 +13,7 @@
 
         <div class="col p-3">
             <div class="image-card text-white">
-                <img src="/images/mediterranean-cuisine.jpg" alt="Des léqumes et épices" class="rounded w-100">
+                <img src="/images/mediterranean-cuisine.jpg" alt="Des légumes et épices" class="rounded w-100">
                 <p class="titre-image">Images 1</p>
                 <div class="action-class-buttons" data-show="admin">
                     <button type="button" class="btn btn-outline-light" data-bs-toggle="modal"
